Add Project Pade

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,5 @@
 <footer>
-    <p>copyRigth {{getCurrentYear}}</p>
+    <p>created by Feras Copyrigth {{getCurrentYear}}</p>
 </footer>
+</body>
+</html>
