--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,5 +8,6 @@
       <h1>{{pageTitle}}</h1>
       <header>
         <p><a href="/">Home<a/></p>
-          <p><a href="/about">About<a/></p>
+        <p><a href="/about">About<a/></p>
+        <p><a href="/projects">Projects<a/></p>
       </header>
